[package]
name = "femtomap"
version = "0.1.0"
authors = ["Martin Hoffmann <hn@nvnc.de>"]
edition = "2021"

[dependencies]
cairo-rs = { version = "0.17", features = ["png", "svg", "v1_16"] }
kurbo    = "0.9.0"
pango = { version = "0.17", features = ["v1_50"] }
pangocairo = { version = "0.17" }
rstar    = "0.10"

serde    = { version = "1", features = ["derive"], optional = true }

